--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,8 +19,8 @@ jobs:
 
 
       - name: Wait for the API to start
-        run: docker compose exec api curl --retry 10 --retry-connrefused http://localhost:3000/healthcheck
+        run: docker compose exec strat-api curl --retry 10 --retry-connrefused http://localhost:3000/healthcheck
       - name: Run the tests
-        run: docker compose exec api yarn test
+        run: docker compose exec strat-api yarn test
       - name: Stop the Docker image
         run: docker compose down
