--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,13 +14,21 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build -t strat-api .
+
+    run:
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
       - name: Run the Docker image
         run: docker compose up -d
 
 
+    test:
       - name: Wait for the API to start
-        run: sleep 10
+        run: sleep 5
       - name: Run the tests
         run: docker compose exec strat-api yarn test
+      
+    stop:  
       - name: Stop the Docker image
         run: docker compose down
