--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run the Docker image
-        run: docker-compose up -d
+        run: docker compose up -d
 
   test:
     needs: run
