--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,8 +16,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      -name: ls -la
+      run: ls -la
       - name: Run the Docker image
-        run: docker compose up -d
+        run: docker-compose up -d
 
   test:
     needs: run
