--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,22 +5,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build -t strat-api .
-
-  run:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Run the Docker image
         run: docker-compose -f docker/docker-compose.yml up -d
-
+      
   test:
-    needs: run
+    needs: build-and-test
     runs-on: ubuntu-latest
     steps:
       - name: Wait for the API to start
