--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,11 +15,24 @@ jobs:
         run: ls -la
       - name: Run the Docker image
         run: docker-compose up -d
+      - name: Backup files
+        uses: actions/upload-artifact@v2
+        with:
+          name: backup
+          path: /home/runner/work/strat-api/strat-api/backup
+
       
   test:
     needs: build-and-run
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Restore files
+        uses: actions/download-artifact@v2
+        with:
+          name: backup
+          path: /home/runner/work/strat-api/strat-api/backup
       - name: Wait for the API to start
         run: sleep 5
       - name: Run the tests
