--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: backup
-          path: /home/runner/work/strat-api/strat-api/backup
+          path: ./
 
       
   test:
@@ -32,7 +32,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: backup
-          path: /home/runner/work/strat-api/strat-api/backup
+          path: ./
       - name: Wait for the API to start
         run: sleep 5
       - name: Run the tests
