--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,26 +15,27 @@ jobs:
         run: ls -la
       - name: Run the Docker image
         run: docker-compose up -d
-      - name: Backup files
-        uses: actions/upload-artifact@v3
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
-          name: backup
-          path: ./
+          username: chahan.movsessian@etu.univ-cotedazur.fr
+          password: eb8?Dtd6$Fi
+      - name: Push the Docker image
+        uses: docker/build-push-action@ad44023a93711e49f2684b5f880cfdd9fbd7bce4
+        with:
+          context: .
+          push: true
+          tags: chahan.movsessian/strat-api:latest
 
-      
+
   test:
     needs: build-and-run
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
-      - name: Change permissions
-        run: chmod -R 755 ./
-      - name: Restore files
-        uses: actions/download-artifact@v3
-        with:
-          name: backup
-          path: ./
+      - name: Pull the Docker image
+        run: docker pull chahan.movsessian/strat-api:latest
       - name: Show files
         run: ls -la&&docker images
       - name: Start the Docker image
