--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Run the Docker image
         run: docker-compose up -d
       - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@v1
         with:
           username: chahan.movsessian@etu.univ-cotedazur.fr
           password: eb8?Dtd6$Fi
