--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,7 +21,7 @@ jobs:
           username: chahan.movsessian@etu.univ-cotedazur.fr
           password: eb8?Dtd6$Fi
       - name: Push the Docker image
-        uses: docker/build-push-action@ad44023a93711e49f2684b5f880cfdd9fbd7bce4
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
