--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,21 +11,19 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build -t strat-api .
-      - name: show files
-        run: ls -la
-      - name: Run the Docker image
-        run: docker-compose up -d
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: chahan.movsessian@etu.univ-cotedazur.fr
-          password: eb8?Dtd6$Fi
-      - name: Push the Docker image
-        uses: docker/build-push-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and export
+        uses: docker/build-push-action@v4
         with:
           context: .
-          push: true
-          tags: chahan.movsessian/strat-api:latest
+          tags: myimage:latest
+          outputs: type=docker,dest=/tmp/strat-api.tar
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: strat-api
+          path: /tmp/strat-api.tar
 
 
   test:
@@ -34,10 +32,13 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
-      - name: Pull the Docker image
-        run: docker pull chahan.movsessian/strat-api:latest
-      - name: Show files
-        run: ls -la&&docker images
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: strat-api
+          path: /tmp
       - name: Start the Docker image
         run: docker-compose up -d
       - name: Wait for the API to start
