--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,6 +39,10 @@ jobs:
         with:
           name: strat-api
           path: /tmp
+      - name: Load image
+        run: |
+          docker load --input /tmp/myimage.tar
+          docker image ls -a
       - name: Start the Docker image
         run: docker-compose up -d
       - name: Wait for the API to start
