--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,7 +41,7 @@ jobs:
           path: /tmp
       - name: Load image
         run: |
-          docker load --input /tmp/myimage.tar
+          docker load --input /tmp/strat-api.tar
           docker image ls -a
       - name: Start the Docker image
         run: docker-compose up -d
