--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build -t strat-api .
+      - name: Start the API
+        run: docker-compose up -d
       - name: Wait for the API to start
         run: sleep 5
       - name: Run the tests
