--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Wait for the API to start
         run: sleep 5
       - name: Run the tests
-        run: docker-compose exec strat-api yarn test
+        run: docker-compose exec -t strat-api yarn test
       - name: Stop the API
         run: docker-compose down
       
