--- a/.github/workflows/BuildAndPush.yml
+++ b/.github/workflows/BuildAndPush.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Test
+name: Docker Build and Push
 
 on:
   push:
@@ -6,17 +6,13 @@ on:
 
 jobs:
   build-run-tests:
-    runs-on: ubuntu-latest
+    runs-on: node:18-alpine
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker image
-        run: docker build -t strat-api .
-      - name: Start the API
-        run: docker-compose up -d
+      - name: Build and run the API
+        run: docker-compose up -d strat-api
       - name: Wait for the API to start
         run: sleep 5
-      - name: Run the tests
-        run: docker-compose exec -t strat-api yarn test
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
