--- a/.github/workflows/BuildAndPush.yml
+++ b/.github/workflows/BuildAndPush.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-run-tests:
-    runs-on: node:18-alpine
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Build and run the API
