--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run-tests:
-    runs-on: node:18-alpine
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Execute tests
