--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_USER=strat
+POSTGRES_USER=postrgres
 POSTGRES_PASSWORD=admin
-POSTGRES_DB=nestjs
+POSTGRES_DB=strat-bd
 
 JWT_EXPIRATION_TIME=21600
  
