--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
-        "@nestjs/common": "^10.0.0",
+        "@databases/pg-schema-cli": "^4.3.1",
+        "@databases/pg-typed": "^4.4.1",
         "@nestjs/cli": "^10.0.0",
+        "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
+        "dotenv": "^16.3.1",
+        "pg": "^8.11.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
