--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_USER=postrgres
-POSTGRES_PASSWORD=admin
-POSTGRES_DB=strat-bd
+POSTGRES_HOST="postgres"
+POSTGRES_PORT="5432"
+POSTGRES_USER="postrgres"
+POSTGRES_PASSWORD="admin"
+POSTGRES_DB="strat-bd"
 
 JWT_EXPIRATION_TIME=21600
  
 PORT=3000
 
 
-DATABASE_URL=postgres://postgres:admin@postgres:5432/strat-bd
+DATABASE_URL="postgres://strat:admin@0.0.0.0:5432/postgres"
