--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
-        "build": "nest build",
+        "build": "nest build && cp src/__generated__/schema.json dist/src/__generated__/",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "node dist/main",
+        "start": "node dist/src/main",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
@@ -20,12 +20,14 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@databases/pg": "^5.4.1",
         "@databases/pg-schema-cli": "^4.3.1",
         "@databases/pg-typed": "^4.4.1",
         "@nestjs/cli": "^10.0.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/schematics": "^10.0.0",
         "dotenv": "^16.3.1",
         "pg": "^8.11.1",
         "reflect-metadata": "^0.1.13",
