--- a/.github/workflows/BuildAndPush.yml
+++ b/.github/workflows/BuildAndPush.yml
@@ -9,10 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build and run the API
-        run: docker-compose up -d strat-api
-      - name: Wait for the API to start
-        run: sleep 5
+      - name: Build 
+        run: docker build -t strat-api .
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
