--- a/.github/workflows/BuildAndPush.yml
+++ b/.github/workflows/BuildAndPush.yml
@@ -9,18 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build 
+      - name: Build Api container
         run: docker build -t strat-api .
+      - name: Build DB container
+        run: docker build -t postgres .
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: cloudblip06
           password: ${{ secrets.DOCKERHUB_PASS }}
-      - name: Push Docker image
+      - name: Push Api Docker image
         run: |
          docker images
          docker tag strat-api cloudblip06/strat-api
          docker push cloudblip06/strat-api  
+      - name: Push Api Docker image
+        run: |
+         docker images
+         docker tag postgres:latest cloudblip06/postgres
+         docker push cloudblip06/postgres  
       - name: Stop the API
         run: docker-compose down
       
