--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -5,13 +5,17 @@ on:
     branches: ["main"]
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+      - name: Checkout code
+        uses: actions/checkout@v3
+
   pull_and_deploy:
     runs-on: ubuntu-latest
 
     needs: [Docker Push]  # depends on Docker push Workflow
 
     steps:
-      - uses: actions/checkout@v3
       - name: Running prod services
         run: docker compose -f docker-compose.prod.yml up -d
       - name: Stoping services
