--- a/.github/workflows/BuildAndPush.yml
+++ b/.github/workflows/BuildAndPush.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-run-tests:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
