--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -14,7 +14,7 @@ jobs:
   pull_and_deploy:
     runs-on: ubuntu-latest
 
-    needs: [build-and-deploy]  # depends on Docker push Workflow
+    needs: [prepare, build-and-push]  # depends on Docker push Workflow
 
     steps:
       - name: Running prod services
