--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -15,7 +15,7 @@ jobs:
   pull_and_deploy:
     runs-on: ubuntu-latest
 
-    needs: [prepare, build-and-push]  # Utilisez "build-and-push" comme dépendance
+    needs: [prepare, Docker_Push]  # Utilisez "build-and-push" comme dépendance
 
     steps:
       - name: Running prod services
