--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -15,7 +15,7 @@ jobs:
   pull_and_deploy:
     runs-on: ubuntu-latest
 
-    needs: [prepare]
+    needs: [prepare, Docker Push]
 
     workflows: ["Docker Push"]
 
