added actions for production deployment/2

--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -2,8 +2,8 @@ name: Deploy from production
 
 on:
   workflow_run:
-    workflows: ["Docker Push"]
-    branches: ["main"]
+    workflows: 
+      - Docker Push
     types:
       - completed
 
