added actions for production deployment/2

--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -3,7 +3,7 @@ name: Deploy from production
 on:
   workflow_run:
     workflows: 
-      - Docker Push
+      - Docker_Push
     types:
       - completed
 
