--- a/.github/workflows/PullAndDeploy.yml
+++ b/.github/workflows/PullAndDeploy.yml
@@ -18,7 +18,7 @@ jobs:
   pull_and_deploy:
     runs-on: ubuntu-latest
 
-    needs: [prepare, Docker Push]
+    needs: [prepare]
     steps:
       - name: Running prod services
         run: docker-compose -f docker-compose.prod.yml up -d
